<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/tuner_menu"
            android:checked="true"
            android:icon="@drawable/ic_baseline_mic_24"
            android:title="@string/tuner" />
        <item
            android:id="@+id/select_instrument_menu"
            android:icon="@drawable/ic_baseline_music_note_24"
            android:title="@string/select_instrument" />
        <item
            android:id="@+id/select_tuning_menu"
            android:icon="@drawable/ic_baseline_queue_music_24"
            android:title="@string/select_tuning" />
    </group>
    <item android:title="@string/activities">
        <menu>
            <item
                android:id="@+id/lessons_menu"
                android:icon="@drawable/ic_baseline_games_24"
                android:title="@string/lessons" />
            <item
                android:id="@+id/chords_book_menu"
                android:icon="@drawable/ic_baseline_library_books_24"
                android:title="@string/chords_book" />
        </menu>
    </item>

</menu>